comments and readme and minor changes

--- a/Telemetry Display/public/boat.html
+++ b/Telemetry Display/public/boat.html
@@ -7,14 +7,11 @@
   <title>Sailbot Dashboard</title>
   <meta name="description" content="Recieves and Displays data from WPI Sailbot">
   <meta name="author" content="Sailbot Team 20-21">
-
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-
 </head>
 
 <body>
   <script src="/js/dependencies/socket.io.min.js"></script>	
   <script type="module" src="js/boatCode.js"></script>
-  <div>Chungus</div>
+  <div>Sending Messages ..... </div>
 </body>
 </html>
