--- a/Telemetry Display/public/index.html
+++ b/Telemetry Display/public/index.html
@@ -19,7 +19,7 @@
   <script src="js/scripts.js"></script>
   <div class="container center">
       <div class="row">
-          <h1>Sailbot Data</h1>
+          <h1 class="col-11">Sailbot Data</h1>
       </div>
   	  <div class="row">
         <div class="col-1"></div>
@@ -50,7 +50,7 @@
           <h6 id="theoreticalWindTitle" class="bot-text font-heavy">Theoretical Wind</h6>
         </div>
 
-        <div id="compass" class="col-3">
+        <div id="compass" class="col-3" style="margin-top: 0px;">
           <div class="north">
   		  	<h6 id="compassNorth" class="font-light">N</h6>
           </div>
@@ -135,10 +135,10 @@
 
         <div id="humidity" class="col-2">
     	  <div>
-      	    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 350 350" height="135px">
-		      <image href="../assets/water-drop.svg" transform="translate(-41, 20) scale(2)"/>
-		    	<text id="humidityVal" class="font-light" x="31%" y="55%" dominant-baseline="middle" textLength="40%" text-anchor="middle" style="font-size: 4rem;">65%</text>
-		    </svg>
+    	      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 350 350" height="135px">
+    		      <image href="../assets/water-drop.svg" transform="translate(-41, 20) scale(2)"/>
+    		    	<text id="humidityVal" class="font-light" x="31%" y="55%" dominant-baseline="middle" textLength="40%" text-anchor="middle" style="font-size: 4rem;">65%</text>
+    		    </svg>
           	<h6 id="humidityTitle" class="font-heavy">Rel Humidity</h6>
       	  </div>
         </div>
