--- a/Telemetry/public/boat.html
+++ b/Telemetry/public/boat.html
@@ -11,7 +11,8 @@
 
 <body>
   <script src="/js/dependencies/socket.io.min.js"></script>	
-  <script type="module" src="js/boatCode.js"></script>
-  <div>Sending Messages ..... </div>
+  <script type="text/javascript" src="js/boatCode.js"></script>
+  <div id="message">Click the button to start sending messages!</div>
+  <button id="but" onclick="sendMockMessages()">Send</button>
 </body>
 </html>
