--- a/Telemetry/public/index.html
+++ b/Telemetry/public/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAqEpMAFofxAxfTmpXh_u_vNm0VDSQ-VqE"></script>
   <script src="/js/dependencies/socket.io.min.js"></script>
   <script type="text/javascript" src="/js/dependencies/d3.min.js" charset="utf-8"></script>
   <script type="text/javascript" src="/js/dependencies/d3gauge.js" charset="utf-8"></script>
@@ -20,6 +21,10 @@
   <div class="container center">
       <div class="row">
           <h1 class="col-11">Sailbot Data</h1>
+      </div>
+      <div class="row">
+        <div id="mapCanvas" class="col-11" style="height: 400px;"></div>
+        <div class="col-2"></div>
       </div>
   	  <div class="row">
         <div class="col-1"></div>
@@ -134,7 +139,7 @@
         <div class="col-1"></div>
 
         <div id="humidity" class="col-2">
-    	  <div>
+    	    <div>
     	      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 350 350" height="135px">
     		      <image href="../assets/water-drop.svg" transform="translate(-41, 20) scale(2)"/>
     		    	<text id="humidityVal" class="font-light" x="31%" y="55%" dominant-baseline="middle" textLength="40%" text-anchor="middle" style="font-size: 4rem;">65%</text>
