--- a/Telemetry/public/index.html
+++ b/Telemetry/public/index.html
@@ -25,6 +25,7 @@
   <!-- Componenents -->
   <script type="text/javascript" src="js/pitchrollGen.js"></script>
   <script type="text/javascript" src="js/initGauges.js"></script>
+  <script type="text/javascript" src="js/initVectors.js"></script>
   <script type="text/javascript" src="js/compassGen.js"></script>
   
   <!-- Controllers -->
@@ -94,7 +95,7 @@
                   <h6 class="font-light">knots</h6>
                 </div>
                 <div id="theoreticalWindVector" class="vector"></div>
-                <h6 id="theoreticalWindTitle" class="bot-text font-heavy">Theoretical Wind</h6>
+                <h6 id="theoreticalWindTitle" class="bot-text font-heavy">True Wind</h6>
               </div>
             </div>
             <div id="gyro" class="datum cell small-2 small-offset-8 center">
