added debug mode for the dashboard with the grid and stuff

--- a/Telemetry/public/index.html
+++ b/Telemetry/public/index.html
@@ -38,6 +38,7 @@
   <div>
     <div id="map-container">
       <div id="mapCanvas"></div>
+      <input type="checkbox" id="myCheck" onclick="toggleDebug()">
     </div>
 
     <div class="grid-container fluid">
